<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffc1e2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/id_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_A"
                android:inputType="phone"
                android:digits="1234567890"/>

            <TextView
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre" />

            <TextView
                android:text="@string/apellidop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apellidop" />

            <TextView
                android:text="@string/apellidom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apellidom" />

            <TextView
                android:text="@string/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/telefono"
                android:inputType="phone"
                android:digits="1234567890"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alta"
                    android:id="@+id/btn_alta"
                    android:onClick="registrar"
                    android:layout_weight="1"
                    android:background="#ffff4897" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/consulta"
                    android:id="@+id/btn_consultar"
                    android:onClick="consulta"
                    android:layout_weight="1"
                    android:background="#ffff4897" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/baja"
                    android:id="@+id/btn_baja"
                    android:onClick="baja"
                    android:layout_weight="1"
                    android:background="#ffff4897" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/modificar"
                    android:id="@+id/btn_modificar"
                    android:onClick="modificacion"
                    android:layout_weight="1"
                    android:background="#ffff4897" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/limpiar"
                    android:id="@+id/btn_limpiar"
                    android:onClick="limpia"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="#ffff4897" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>